Update sms creation
